chore: replace JDK 9+ API (List.of, Map.of) with JDK 8 equivalents, update java.version to 1.8, version to 2.3.x